fix: select options not visible in certain browsers

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -56,3 +56,7 @@ body {
 .js-toggle-favorite {
   cursor: pointer;
 }
+
+select.form-control > option {
+  background-color: #1F2251;
+}
